--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.2
-gunicorn==21.2.0
-yfinance==0.2.33
-numpy==1.24.3
-pandas==1.5.3
-scipy==1.10.1
+Flask
+gunicorn
+yfinance
+numpy
+pandas
+scipy
